--- a/config/database.yml
+++ b/config/database.yml
@@ -10,12 +10,12 @@ default: &default
   pool: 5
   timeout: 5000
 
-development:
+production:
   adapter: postgresql
   encoding: utf-8
   pool: 5
   timeout: 5000
-  
+
 # # Warning: The database defined as "test" will be erased and
 # # re-generated from your development database when you run "rake".
 # # Do not set this db to the same as development or production.
